correctionContrast

--- a/style.css
+++ b/style.css
@@ -782,7 +782,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: rgb(148,54,11)!important;
 }
 
 .btn-atomic-tangerine {
